# tuneset

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  logging.py  main.py  redis_async.py  redis_client.py
backend/app/ai/: pricing.py  prompts.py  provider.py
backend/app/api/: auth.py  classify.py  profile.py  qq.py  settings.py  songlist.py  stream.py
backend/app/auth/: deps.py  jwt.py
backend/app/db/: base.py
backend/app/models/: __init__.py  audit.py  invite_code.py  proxy_config.py  user.py
backend/app/qqmusic/: client.py  credential_store.py  fav.py  songlist.py
backend/app/ratelimit/: deps.py  middleware.py
backend/app/schemas/: auth.py  classify.py  profile.py  qq.py  settings.py
backend/app/security/: __init__.py  crypto.py
backend/app/services/: audit.py
backend/app/tasks/: celery_app.py  classify_task.py  fav_cache.py  profile_task.py
backend/app/workflow/: graph.py  nodes.py  state.py
backend/tests/: conftest.py  test_auth.py  test_classify.py
deploy/: docker-compose.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  RUNBOOK.md  frontend-current-state.md  plan.md  qqmusic-api-interfaces.md
docs/superpowers/: frontend-current-state.md
docs/superpowers/plans/: batch-classify-design.md  (+5 more)
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api.ts  config.ts  index.css  main.tsx  types.ts
(+31 files in other folders)
